--- a/InvertedPendulum/InvertedPendulum.org
+++ b/InvertedPendulum/InvertedPendulum.org
@@ -28,12 +28,13 @@ def psi( s ):
 
 def phi( s, a ):
     answer = zeros((30,1))
-    index = a*10
+    index = int(a)*10
     answer[ index:index+10 ] = psi( s )
     return answer
 
    #+end_src
 * Obtaining samples from the expert
+
 #+begin_src c :tangle omega_E.c :main no
 #define _POSIX_C_SOURCE 1
 #include <gsl/gsl_matrix.h>
@@ -88,6 +89,24 @@ int main( void ){
 
 #+end_src
 
+
+#+begin_src python :tangle omega_E.py
+#!/usr/bin/python
+import InvertedPendulum
+from pylab import *
+import sys
+sys.path+=['..']
+from LSPI import *
+D_FILE_NAME = "Random_Samples.mat"
+ACTION_FILE = "actions.mat"
+
+print "Training the expert..."
+D = genfromtxt( D_FILE_NAME )
+actions = genfromtxt( ACTION_FILE )
+omega_expert = LSPI( D, 2, 1, InvertedPendulum.phi, 30, actions, 0.01, 50 )
+savetxt( "python_expert.mat", omega_expert )
+
+#+end_src
 
 #+begin_src c :tangle DE.c :main no
 #define _POSIX_C_SOURCE 1
